--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cy:run_day02":"npx cypress run --spec 'cypress/e2e/day02/' --browser chrome"
   },
   "author": "",
   "license": "ISC",
